Initial Latex template with modifications for local Latex environment.

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -106,7 +106,7 @@
     \refstepcounter{dummy}
 
 %\chapter*{Glosarios de t\'erminos}
-%\setglossarysection{chapter}
+\setglossarysection{chapter}
 
 %\setglossarystyle{altlistgroup}
 %\setglossarystyle{altlistgroup}
@@ -117,10 +117,10 @@
 %\glsaddallunused %MOSTRAR LAS NO USADAS
 %\printglossaries
 
-% \clearpage
+ \clearpage
 
-% \printglossary[title={Lista de t\'erminos},toctitle={Listado de t\'erminos}]
-% \pdfbookmark[1]{Glosario}{glosario}
+ \printglossary[title={Lista de t\'erminos},toctitle={Listado de t\'erminos}]
+ \pdfbookmark[1]{Glosario}{glosario}
 
 \endgroup
 
