--- a/tesis-config.tex
+++ b/tesis-config.tex
@@ -612,7 +612,7 @@ every picture/.append style={
     urlcolor=colorCorporativoOscuro, linkcolor=alternateTitlecolor, citecolor=Maroon, %pagecolor=RoyalBlue,%
     % uncomment the following line if you want to have black links (e.g., for printing)
     %urlcolor=Black, linkcolor=Black, citecolor=Black, %pagecolor=Black,%
-    urlcolor=Gray, linkcolor=Gray, citecolor=Gray, %pagecolor=Black,%
+    %urlcolor=Gray, linkcolor=Gray, citecolor=Gray, %pagecolor=Black,%
     pdftitle={\myTitle},%
     pdfauthor={\textcopyright\ \myName, \myUni, \myFaculty},%
     pdfsubject={},%
